# api/docs/swagger.yaml
@@ -90,8 +90,6 @@ definitions:
     type: object
   models.FollowReq:
     properties:
-      follower_id:
-        type: string
       following_id:
         type: string
     type: object
@@ -103,27 +101,6 @@ definitions:
         type: string
       following_id:
         type: string
-    type: object
-  models.Follower:
-    properties:
-      email:
-        type: string
-      username:
-        type: string
-    type: object
-  models.Followers:
-    properties:
-      followers:
-        items:
-          $ref: '#/definitions/models.Follower'
-        type: array
-    type: object
-  models.Followings:
-    properties:
-      ids:
-        items:
-          $ref: '#/definitions/models.Ids'
-        type: array
     type: object
   models.GetProfileResponse:
     properties:
@@ -152,13 +129,6 @@ definitions:
       updated_at:
         type: string
       username:
-        type: string
-    type: object
-  models.Ids:
-    properties:
-      follower_id:
-        type: string
-      following_id:
         type: string
     type: object
   models.LikeReq:
@@ -273,8 +243,6 @@ definitions:
         type: string
       profile_image:
         type: string
-      user_id:
-        type: string
       username:
         type: string
     type: object
@@ -306,14 +274,49 @@ definitions:
       username:
         type: string
     type: object
-  models.UserResponses:
+  models.Void:
+    type: object
+  user.Followers:
+    properties:
+      followers:
+        items:
+          type: string
+        type: array
+    type: object
+  user.Followings:
+    properties:
+      following:
+        items:
+          type: string
+        type: array
+    type: object
+  user.UserResponse:
+    properties:
+      bio:
+        type: string
+      created_at:
+        type: string
+      email:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: string
+      last_name:
+        type: string
+      nationality:
+        type: string
+      phone:
+        type: string
+      username:
+        type: string
+    type: object
+  user.UserResponses:
     properties:
       users:
         items:
-          $ref: '#/definitions/models.UserResponse'
+          $ref: '#/definitions/user.UserResponse'
         type: array
-    type: object
-  models.Void:
     type: object
 info:
   contact: {}
@@ -321,6 +324,174 @@ info:
   title: Api-Geteway service for mini-twitter
   version: "1.0"
 paths:
+  /admin/change_profile_image_by_id/{user_id}:
+    put:
+      consumes:
+      - application/json
+      description: Update the profile image of a user
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      - description: Change profile image
+        in: body
+        name: ChangeProfileImageById
+        required: true
+        schema:
+          $ref: '#/definitions/models.URL'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Void'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - BearerAuth: []
+      summary: Change User Profile Image
+      tags:
+      - Admin
+  /admin/create:
+    post:
+      consumes:
+      - application/json
+      description: Create a new user
+      parameters:
+      - description: Create user
+        in: body
+        name: Create
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.UserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - BearerAuth: []
+      summary: Create User
+      tags:
+      - Admin
+  /admin/delete/{user_id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a user account
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Message'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - BearerAuth: []
+      summary: Delete User
+      tags:
+      - Admin
+  /admin/get_profile_by_id/{user_id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve the profile of a user
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.GetProfileResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - BearerAuth: []
+      summary: Get User Profile
+      tags:
+      - Admin
+  /admin/update_profile_by_id/{user_id}:
+    put:
+      consumes:
+      - application/json
+      description: Update user profile details
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      - description: Update user profile
+        in: body
+        name: UpdateProfileById
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateProfileRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.UserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - BearerAuth: []
+      summary: Update User Profile
+      tags:
+      - Admin
   /comment/add_like/{comment_id}:
     get:
       consumes:
@@ -1070,79 +1241,12 @@ paths:
       summary: Change User Profile Image
       tags:
       - User
-  /user/create:
-    post:
-      consumes:
-      - application/json
-      description: Create a new user
-      parameters:
-      - description: Create user
-        in: body
-        name: Create
-        required: true
-        schema:
-          $ref: '#/definitions/models.CreateRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/models.UserResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.Error'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.Error'
-      security:
-      - BearerAuth: []
-      summary: Create User
-      tags:
-      - User
-  /user/delete/{user_id}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete a user account
-      parameters:
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Message'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.Error'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.Error'
-      security:
-      - BearerAuth: []
-      summary: Delete User
-      tags:
-      - User
   /user/fetch_users:
     get:
       consumes:
       - application/json
       description: Retrieve a list of users with filtering options
       parameters:
-      - description: User role
-        in: query
-        name: role
-        type: string
       - description: Page number
         in: query
         name: page
@@ -1161,7 +1265,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.UserResponses'
+            $ref: '#/definitions/user.UserResponses'
         "400":
           description: Bad Request
           schema:
@@ -1207,17 +1311,11 @@ paths:
       summary: Follow User
       tags:
       - User
-  /user/get_profile/{user_id}:
+  /user/get_profile:
     get:
       consumes:
       - application/json
       description: Retrieve the profile of a user
-      parameters:
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: string
       produces:
       - application/json
       responses:
@@ -1238,17 +1336,11 @@ paths:
       summary: Get User Profile
       tags:
       - User
-  /user/get_user_followers/{user_id}:
+  /user/get_user_followers:
     get:
       consumes:
       - application/json
       description: Retrieve a list of followers for a specific user
-      parameters:
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: string
       produces:
       - application/json
       responses:
@@ -1269,17 +1361,11 @@ paths:
       summary: Get User Followers
       tags:
       - User
-  /user/get_user_follows/{user_id}:
+  /user/get_user_follows:
     get:
       consumes:
       - application/json
       description: Retrieve a list of users that a specific user is following
-      parameters:
-      - description: User ID
-        in: path
-        name: UserId
-        required: true
-        type: string
       produces:
       - application/json
       responses:
@@ -1300,24 +1386,18 @@ paths:
       summary: Get User Follows
       tags:
       - User
-  /user/list_of_followers/{user_id}:
+  /user/list_of_followers:
     get:
       consumes:
       - application/json
       description: Retrieve the list of followers for a user
-      parameters:
-      - description: User ID
-        in: path
-        name: UserId
-        required: true
-        type: string
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Followers'
+            $ref: '#/definitions/user.Followers'
         "400":
           description: Bad Request
           schema:
@@ -1331,15 +1411,15 @@ paths:
       summary: List of Followers
       tags:
       - User
-  /user/list_of_following/{user_id}:
+  /user/list_of_followers_by_username/{username}:
     get:
       consumes:
       - application/json
-      description: Retrieve the list of users that a specific user is following
+      description: Retrieve the list of followers for a user
       parameters:
-      - description: User ID
+      - description: Username
         in: path
-        name: UserId
+        name: username
         required: true
         type: string
       produces:
@@ -1348,7 +1428,63 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Followings'
+            $ref: '#/definitions/user.Followers'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - BearerAuth: []
+      summary: List of Followers
+      tags:
+      - User
+  /user/list_of_following:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve the list of users that a specific user is following
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.Followings'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - BearerAuth: []
+      summary: List of Following Users
+      tags:
+      - User
+  /user/list_of_following_by_username/{username}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve the list of users that a specific user is following
+      parameters:
+      - description: Username
+        in: path
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.Followings'
         "400":
           description: Bad Request
           schema:
@@ -1388,7 +1524,7 @@ paths:
       tags:
       - User
   /user/unfollow:
-    post:
+    delete:
       consumes:
       - application/json
       description: Unfollow a user
