# api/handler/user.go
@@ -23,6 +23,8 @@ type UserHandler interface {
 	FetchUsers(c *gin.Context)
 	ListOfFollowing(c *gin.Context)
 	ListOfFollowers(c *gin.Context)
+	ListOfFollowingByUsername(c *gin.Context)
+	ListOfFollowersByUsername(c *gin.Context)
 	DeleteUser(c *gin.Context)
 
 	Follow(c *gin.Context)
@@ -53,14 +55,14 @@ func NewUserHandler(userService service.Service, logger *slog.Logger) UserHandle
 // @Summary Create User
 // @Description Create a new user
 // @Security BearerAuth
-// @Tags User
+// @Tags Admin
 // @Accept json
 // @Produce json
 // @Param Create body models.CreateRequest true "Create user"
 // @Success 201 {object} models.UserResponse
 // @Failure 400 {object} models.Error
 // @Failure 500 {object} models.Error
-// @Router /user/create [post]
+// @Router /admin/create [post]
 func (h *userHandler) Create(c *gin.Context) {
 	var user models.CreateRequest
 
@@ -97,12 +99,37 @@ func (h *userHandler) Create(c *gin.Context) {
 // @Tags User
 // @Accept json
 // @Produce json
+// @Success 200 {object} models.GetProfileResponse
+// @Failure 400 {object} models.Error
+// @Failure 500 {object} models.Error
+// @Router /user/get_profile [get]
+func (h *userHandler) GetProfile(c *gin.Context) {
+	req := pb.Id{
+		UserId: c.MustGet("user_id").(string),
+	}
+
+	res, err := h.userService.GetProfile(context.Background(), &req)
+	if err != nil {
+		h.logger.Error("Error occurred while getting user", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, res)
+}
+
+// GetProfileById godoc
+// @Summary Get User Profile
+// @Description Retrieve the profile of a user
+// @Security BearerAuth
+// @Tags Admin
+// @Accept json
+// @Produce json
 // @Param user_id path string true "User ID"
 // @Success 200 {object} models.GetProfileResponse
 // @Failure 400 {object} models.Error
 // @Failure 500 {object} models.Error
-// @Router /user/get_profile/{user_id} [get]
-func (h *userHandler) GetProfile(c *gin.Context) {
+// @Router /admin/get_profile_by_id/{user_id} [get]
+func (h *userHandler) GetProfileById(c *gin.Context) {
 	req := pb.Id{
 		UserId: c.Param("user_id"),
 	}
@@ -136,7 +163,47 @@ func (h *userHandler) UpdateProfile(c *gin.Context) {
 		return
 	}
 	res := pb.UpdateProfileRequest{
-		UserId:       c.MustGet("UserId").(string),
+		UserId:       c.MustGet("user_id").(string),
+		FirstName:    user.FirstName,
+		LastName:     user.LastName,
+		PhoneNumber:  user.PhoneNumber,
+		Username:     user.Username,
+		Nationality:  user.Nationality,
+		Bio:          user.Bio,
+		ProfileImage: user.ProfileImage,
+	}
+
+	req, err := h.userService.UpdateProfile(context.Background(), &res)
+	if err != nil {
+		h.logger.Error("Error occurred while updating user", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, req)
+}
+
+// UpdateProfileById godoc
+// @Summary Update User Profile
+// @Description Update user profile details
+// @Security BearerAuth
+// @Tags Admin
+// @Accept json
+// @Produce json
+// @Param user_id path string true "User ID"
+// @Param UpdateProfileById body models.UpdateProfileRequest true "Update user profile"
+// @Success 200 {object} models.UserResponse
+// @Failure 400 {object} models.Error
+// @Failure 500 {object} models.Error
+// @Router /admin/update_profile_by_id/{user_id} [put]
+func (h *userHandler) UpdateProfileById(c *gin.Context) {
+	var user models.UpdateProfileRequest
+	if err := c.ShouldBindJSON(&user); err != nil {
+		h.logger.Error("Error occurred while binding json", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	res := pb.UpdateProfileRequest{
+		UserId:       c.Param("user_id"),
 		FirstName:    user.FirstName,
 		LastName:     user.LastName,
 		PhoneNumber:  user.PhoneNumber,
@@ -228,7 +295,40 @@ func (h *userHandler) ChangeProfileImage(c *gin.Context) {
 		return
 	}
 	res := pb.URL{
-		UserId: c.MustGet("UserId").(string),
+		UserId: c.MustGet("user_id").(string),
+		Url:    user.URL,
+	}
+	req, err := h.userService.ChangeProfileImage(context.Background(), &res)
+	if err != nil {
+		h.logger.Error("Error occurred while changing user", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, req)
+}
+
+// ChangeProfileImageById godoc
+// @Summary Change User Profile Image
+// @Description Update the profile image of a user
+// @Security BearerAuth
+// @Tags Admin
+// @Accept json
+// @Produce json
+// @Param user_id path string true "User ID"
+// @Param ChangeProfileImageById body models.URL true "Change profile image"
+// @Success 200 {object} models.Void
+// @Failure 400 {object} models.Error
+// @Failure 500 {object} models.Error
+// @Router /admin/change_profile_image_by_id/{user_id} [put]
+func (h *userHandler) ChangeProfileImageById(c *gin.Context) {
+	var user models.URL
+	if err := c.ShouldBindJSON(&user); err != nil {
+		h.logger.Error("Error occurred while binding json", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	res := pb.URL{
+		UserId: c.Param("user_id"),
 		Url:    user.URL,
 	}
 	req, err := h.userService.ChangeProfileImage(context.Background(), &res)
@@ -247,16 +347,14 @@ func (h *userHandler) ChangeProfileImage(c *gin.Context) {
 // @Tags User
 // @Accept json
 // @Produce json
-// @Param role query string false "User role"
 // @Param page query int false "Page number"
 // @Param limit query int false "Number of users per page"
 // @Param name query string false "Username"
-// @Success 200 {object} models.UserResponses
+// @Success 200 {object} user.UserResponses
 // @Failure 400 {object} models.Error
 // @Failure 500 {object} models.Error
 // @Router /user/fetch_users [get]
 func (h *userHandler) FetchUsers(c *gin.Context) {
-	role := c.Query("role")
 	pageStr := c.Query("page")
 	limitStr := c.Query("limit")
 	name := c.Query("name")
@@ -272,7 +370,6 @@ func (h *userHandler) FetchUsers(c *gin.Context) {
 	}
 
 	res := pb.Filter{
-		Role:      role,
 		Page:      int32(page),
 		Limit:     int32(limit),
 		FirstName: name,
@@ -295,11 +392,10 @@ func (h *userHandler) FetchUsers(c *gin.Context) {
 // @Tags User
 // @Accept json
 // @Produce json
-// @Param UserId path string true "User ID"
-// @Success 200 {object} models.Followings
+// @Success 200 {object} user.Followings
 // @Failure 400 {object} models.Error
 // @Failure 500 {object} models.Error
-// @Router /user/list_of_following/{user_id} [get]
+// @Router /user/list_of_following [get]
 func (h *userHandler) ListOfFollowing(c *gin.Context) {
 	res := pb.Id{
 		UserId: c.MustGet("user_id").(string),
@@ -313,6 +409,56 @@ func (h *userHandler) ListOfFollowing(c *gin.Context) {
 	c.JSON(http.StatusOK, req)
 }
 
+// ListOfFollowingByUsername godoc
+// @Summary List of Following Users
+// @Description Retrieve the list of users that a specific user is following
+// @Security BearerAuth
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param username path string true "Username"
+// @Success 200 {object} user.Followings
+// @Failure 400 {object} models.Error
+// @Failure 500 {object} models.Error
+// @Router /user/list_of_following_by_username/{username} [get]
+func (h *userHandler) ListOfFollowingByUsername(c *gin.Context) {
+	res := pb.Id{
+		UserId: c.Param("username"),
+	}
+	req, err := h.userService.ListOfFollowingByUsername(context.Background(), &res)
+	if err != nil {
+		h.logger.Error("Error occurred while listing following", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, req)
+}
+
+// ListOfFollowersByUsername godoc
+// @Summary List of Followers
+// @Description Retrieve the list of followers for a user
+// @Security BearerAuth
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param username path string true "Username"
+// @Success 200 {object} user.Followers
+// @Failure 400 {object} models.Error
+// @Failure 500 {object} models.Error
+// @Router /user/list_of_followers_by_username/{username} [get]
+func (h *userHandler) ListOfFollowersByUsername(c *gin.Context) {
+	res := pb.Id{
+		UserId: c.Param("username"),
+	}
+	req, err := h.userService.ListOfFollowersByUsername(context.Background(), &res)
+	if err != nil {
+		h.logger.Error("Error occurred while listing followers", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, req)
+}
+
 // ListOfFollowers godoc
 // @Summary List of Followers
 // @Description Retrieve the list of followers for a user
@@ -320,11 +466,10 @@ func (h *userHandler) ListOfFollowing(c *gin.Context) {
 // @Tags User
 // @Accept json
 // @Produce json
-// @Param UserId path string true "User ID"
-// @Success 200 {object} models.Followers
+// @Success 200 {object} user.Followers
 // @Failure 400 {object} models.Error
 // @Failure 500 {object} models.Error
-// @Router /user/list_of_followers/{user_id} [get]
+// @Router /user/list_of_followers [get]
 func (h *userHandler) ListOfFollowers(c *gin.Context) {
 	res := pb.Id{
 		UserId: c.MustGet("user_id").(string),
@@ -342,14 +487,14 @@ func (h *userHandler) ListOfFollowers(c *gin.Context) {
 // @Summary Delete User
 // @Description Delete a user account
 // @Security BearerAuth
-// @Tags User
+// @Tags Admin
 // @Accept json
 // @Produce json
 // @Param user_id path string true "User ID"
 // @Success 200 {object} models.Message
 // @Failure 400 {object} models.Error
 // @Failure 500 {object} models.Error
-// @Router /user/delete/{user_id} [delete]
+// @Router /admin/delete/{user_id} [delete]
 func (h *userHandler) DeleteUser(c *gin.Context) {
 	res := pb.Id{
 		UserId: c.Param("user_id"),
@@ -382,9 +527,10 @@ func (h *userHandler) Follow(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
+
 	res := pb.FollowReq{
 		FollowingId: user.FollowingID,
-		FollowerId:  user.FollowerID,
+		FollowerId:  c.MustGet("user_id").(string),
 	}
 
 	req, err := h.userService.Follow(context.Background(), &res)
@@ -407,7 +553,7 @@ func (h *userHandler) Follow(c *gin.Context) {
 // @Success 200 {object} models.DFollowRes
 // @Failure 400 {object} models.Error
 // @Failure 500 {object} models.Error
-// @Router /user/unfollow [post]
+// @Router /user/unfollow [delete]
 func (h *userHandler) Unfollow(c *gin.Context) {
 	var user models.FollowReq
 	if err := c.ShouldBindJSON(&user); err != nil {
@@ -417,7 +563,7 @@ func (h *userHandler) Unfollow(c *gin.Context) {
 	}
 	res := pb.FollowReq{
 		FollowingId: user.FollowingID,
-		FollowerId:  user.FollowerID,
+		FollowerId:  c.MustGet("user_id").(string),
 	}
 
 	req, err := h.userService.Unfollow(context.Background(), &res)
@@ -436,14 +582,13 @@ func (h *userHandler) Unfollow(c *gin.Context) {
 // @Tags User
 // @Accept json
 // @Produce json
-// @Param user_id path string true "User ID"
 // @Success 200 {object} models.Count
 // @Failure 400 {object} models.Error
 // @Failure 500 {object} models.Error
-// @Router /user/get_user_followers/{user_id} [get]
+// @Router /user/get_user_followers [get]
 func (h *userHandler) GetUserFollowers(c *gin.Context) {
 	res := pb.Id{
-		UserId: c.Param("user_id"),
+		UserId: c.MustGet("user_id").(string),
 	}
 	req, err := h.userService.GetUserFollowers(context.Background(), &res)
 	if err != nil {
@@ -461,11 +606,10 @@ func (h *userHandler) GetUserFollowers(c *gin.Context) {
 // @Tags User
 // @Accept json
 // @Produce json
-// @Param UserId path string true "User ID"
 // @Success 200 {object} models.Count
 // @Failure 400 {object} models.Error
 // @Failure 500 {object} models.Error
-// @Router /user/get_user_follows/{user_id} [get]
+// @Router /user/get_user_follows [get]
 func (h *userHandler) GetUserFollows(c *gin.Context) {
 	res := pb.Id{
 		UserId: c.MustGet("user_id").(string),
